Add processPhoto method change ver to 0.0.2